--- a/produtos.html
+++ b/produtos.html
@@ -50,12 +50,14 @@ const firebaseConfig = {
 };
 
 const PHONE = "5567992018672";
+
+// Inicializar Firebase
 const app = initializeApp(firebaseConfig);
 const db = getFirestore(app);
 
-// Segurança
+// Função para evitar erro com HTML
 function esc(s){
-  return String(s||'').replace(/[&<>"']/g, m =>
+  return String(s || '').replace(/[&<>"']/g, m =>
     ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;'}[m])
   );
 }
@@ -66,28 +68,30 @@ const q = query(collection(db, 'products'), orderBy('createdAt', 'desc'));
 onSnapshot(q, snap => {
   const arr = [];
   snap.forEach(d => arr.push(d.data()));
-  render(arr, "all");
-  document.querySelectorAll(".catBtn").forEach(btn=>{
+  render(arr, 'all');
+
+  document.querySelectorAll('.catBtn').forEach(btn=>{
     btn.onclick = () => render(arr, btn.dataset.cat);
   });
-}, err=>{
-  grid.innerHTML = "<p>Erro ao carregar produtos.</p>";
+}, err => {
+  grid.innerHTML = '<p>Erro ao carregar produtos.</p>';
   console.error(err);
 });
 
 function render(list, filter){
-  grid.innerHTML = "";
-  list.forEach(p=>{
+  grid.innerHTML = '';
+
+  list.forEach(p => {
     if(!p.active) return;
-    if(filter !== "all" && p.category !== filter) return;
+    if(filter !== 'all' && p.category !== filter) return;
 
-    const img = p.imageUrl || p.image || "placeholder.png";
+    const img = p.imageUrl || p.image || 'placeholder.png';
     const priceText = p.price
-      ? `${p.currency || "R$"} ${Number(p.price).toFixed(2)}`
-      : "Consultar valores";
+      ? `${p.currency || 'R$'} ${Number(p.price).toFixed(2)}`
+      : 'Consultar valores';
 
-    const el = document.createElement("div");
-    el.className = "card";
+    const el = document.createElement('div');
+    el.className = 'card';
     el.innerHTML = `
       <img src="${esc(img)}" alt="${esc(p.name)}">
       <h3>${esc(p.name)}</h3>
@@ -95,16 +99,18 @@ function render(list, filter){
       <a class="botao buy">Comprar</a>
     `;
 
-    el.querySelector(".buy").addEventListener("click",()=>{
-      const variantLabel = (p.type === "pod") ? "Sabor" : "Cor";
-      const variant = (p.options && p.options[0]) ? p.options[0] : "-";
+    el.querySelector('.buy').addEventListener('click', () => {
+      const variantLabel = (p.type === 'pod') ? 'Sabor' : 'Cor';
+      const variant = (p.options && p.options[0]) ? p.options[0] : '-';
+
       const text = encodeURIComponent(
-`Olá! Tenho interesse no produto: ${p.name}
+        `Olá! Tenho interesse no produto: ${p.name}
 Quantidade: 1
 ${variantLabel}: ${variant}
 Valor: ${priceText}
 Forma de Pagamento: PIX`
       );
+
       window.open(`https://wa.me/${PHONE}?text=${text}`, "_blank");
     });
 
@@ -112,7 +118,7 @@ Forma de Pagamento: PIX`
   });
 
   if(grid.children.length === 0){
-    grid.innerHTML = "<p>Nenhum item nesta categoria.</p>";
+    grid.innerHTML = '<p>Nenhum item nesta categoria.</p>';
   }
 }
 </script>
