--- a/produtos.html
+++ b/produtos.html
@@ -4,9 +4,141 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Produtos — PrimeZilla</title>
+
 <link rel="stylesheet" href="style.css">
+
+<style>
+
+/* ======== ESTILO MODELO LIFEPOD ======== */
+
+body {
+  background: #0a0a0a;
+  color: #fff;
+  font-family: "Inter", sans-serif;
+}
+
+.container {
+  padding: 20px;
+  max-width: 1100px;
+  margin: auto;
+}
+
+h2 {
+  font-size: 26px;
+  margin-bottom: 16px;
+}
+
+/* CATEGORIAS */
+.cats {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 20px;
+  flex-wrap: wrap;
+}
+
+.catBtn {
+  background: #111;
+  border: 1px solid #333;
+  color: #ccc;
+  padding: 8px 16px;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: .2s;
+}
+
+.catBtn:hover, 
+.catBtn.ativo-cat {
+  background: #00d4ff;
+  border-color: #00d4ff;
+  color: #000;
+}
+
+/* GRADE DE PRODUTOS */
+.grid {
+  display: grid;
+  gap: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+}
+
+/* CARD ESTILO LIFEPOD */
+.card {
+  background: #141414;
+  border-radius: 14px;
+  padding: 16px;
+  transition: .2s;
+  border: 1px solid #1f1f1f;
+}
+.card:hover {
+  transform: scale(1.02);
+  border-color: #00d4ff;
+}
+
+/* IMAGEM */
+.card .media img {
+  width: 100%;
+  height: 230px;
+  border-radius: 12px;
+  object-fit: cover;
+}
+
+/* INFO */
+.card .info h3 {
+  margin: 10px 0 6px 0;
+  font-size: 20px;
+}
+
+.price {
+  font-weight: bold;
+  color: #00d4ff;
+  margin-bottom: 12px;
+  font-size: 18px;
+}
+
+/* CONTROLES */
+.controls {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+label {
+  display: flex;
+  flex-direction: column;
+  font-size: 14px;
+  color: #ddd;
+}
+
+select {
+  background: #0d0d0d;
+  border: 1px solid #333;
+  color: #fff;
+  padding: 8px;
+  margin-top: 4px;
+  border-radius: 6px;
+}
+
+/* BOTÃO DE COMPRA */
+.botao {
+  background: linear-gradient(90deg, #00d4ff, #007ac1);
+  color: #000;
+  font-weight: bold;
+  padding: 12px;
+  border-radius: 8px;
+  border: none;
+  cursor: pointer;
+  margin-top: 6px;
+  transition: .2s;
+}
+
+.botao:hover {
+  filter: brightness(1.2);
+}
+
+</style>
 </head>
+
 <body>
+
 <header class="topo">
   <div class="brand">
     <img src="https://res.cloudinary.com/duwsueept/image/upload/jq5bm4gwdwi3kpxgrago" class="logo" alt="PrimeZilla">
@@ -23,7 +155,7 @@
   <h2>Produtos</h2>
 
   <div class="cats">
-    <button class="catBtn" data-cat="all">Todos</button>
+    <button class="catBtn ativo-cat" data-cat="all">Todos</button>
     <button class="catBtn" data-cat="pods">Pods</button>
     <button class="catBtn" data-cat="acessorios">Acessórios</button>
     <button class="catBtn" data-cat="eletronicos">Eletrônicos</button>
@@ -38,13 +170,9 @@
 </footer>
 
 <script>
-/*
-  Versão: carrega produtos do arquivo produtos.json (GitHub)
-  - Mantém filtragem por categoria
-  - Aceita produtos sem campo `active` (exibe se active !== false)
-  - Link de compra abre WhatsApp
-*/
-const PHONE = "5567992018672"; // seu número
+/* === SEU SCRIPT (SEM MUDAR LÓGICA) === */
+
+const PHONE = "5567992018672";
 
 function esc(s){
   return String(s||'').replace(/[&<>"']/g, m =>
@@ -53,104 +181,102 @@ function esc(s){
 }
 
 const grid = document.getElementById('productsGrid');
-const catButtons = Array.from(document.querySelectorAll('.catBtn'));
+const catButtons = [...document.querySelectorAll('.catBtn')];
+
 let produtos = [];
 
-// carrega JSON
 async function loadProdutos(){
   grid.innerHTML = 'Carregando...';
   try {
-    const res = await fetch('produtos.json?'+Date.now());
-    if(!res.ok) throw new Error('Erro ao buscar produtos.json: ' + res.status);
+    const res = await fetch('produtos.json?' + Date.now());
     produtos = await res.json();
     render('all');
-  } catch(err){
-    console.error(err);
+  } catch(e){
+    console.error(e);
     grid.innerHTML = '<p>Erro ao carregar produtos.</p>';
   }
 }
 
-// render com filtro
 function render(filter){
-  grid.innerHTML = '';
-  const list = produtos || [];
-  list.forEach(p => {
-    // mostrar: active !== false (ou seja, true ou undefined -> mostrar)
+  grid.innerHTML = "";
+
+  produtos.forEach(p => {
     if(p.active === false) return;
-    if(filter !== 'all' && String(p.category||'').toLowerCase() !== filter) return;
+    if(filter !== "all" && String(p.category||"").toLowerCase() !== filter) return;
 
-    const img = p.imageUrl || p.image || 'placeholder.png';
-    const priceText = (p.price !== null && p.price !== undefined)
+    const img = p.imageUrl || p.image || "placeholder.png";
+    const priceText = p.price !== undefined
       ? `${p.currency || 'R$'} ${Number(p.price).toFixed(2)}`
-      : 'Consultar valores';
+      : "Consultar valores";
 
-    const el = document.createElement('div');
-    el.className = 'card';
-    el.innerHTML = `
-      <div class="media"><img src="${esc(img)}" alt="${esc(p.name)}"></div>
+    const card = document.createElement("div");
+    card.className = "card";
+
+    card.innerHTML = `
+      <div class="media"><img src="${esc(img)}"></div>
       <div class="info">
         <h3>${esc(p.name)}</h3>
         <p class="price">${esc(priceText)}</p>
+
         <div class="controls">
-          <label>Qtd
-            <select class="qty"><option>1</option><option>2</option><option>3</option></select>
+
+          <label>Quantidade
+            <select class="qty">
+              <option>1</option><option>2</option><option>3</option>
+            </select>
           </label>
-          <label>${(p.type === 'pod') ? 'Sabor' : 'Cor'}
-            <select class="variant">${(p.options||[]).map(o=>`<option>${esc(o)}</option>`).join('')}</select>
+
+          <label>${p.type === "pod" ? "Sabor" : "Cor"}
+            <select class="variant">
+              ${(p.options || []).map(o => `<option>${esc(o)}</option>`).join("")}
+            </select>
           </label>
+
           <label>Pagamento
-            <select class="pay"><option>PIX</option><option>Dinheiro</option><option>Cartão</option></select>
+            <select class="pay">
+              <option>PIX</option><option>Dinheiro</option><option>Cartão</option>
+            </select>
           </label>
-          <button class="btnBuy botao">Comprar (WhatsApp)</button>
+
+          <button class="botao btnBuy">Comprar no WhatsApp</button>
+
         </div>
       </div>
     `;
 
-    el.querySelector('.btnBuy').addEventListener('click', ()=>{
-      const qtd = el.querySelector('.qty').value;
-      const variant = el.querySelector('.variant').value || '-';
-      const pay = el.querySelector('.pay').value;
-      const variantLabel = (p.type === 'pod') ? 'Sabor' : 'Cor';
-      const valorText = (p.price !== null && p.price !== undefined) ? `${p.currency||'R$'} ${Number(p.price).toFixed(2)}` : 'Consultar valores';
-      const text = encodeURIComponent(
-        `Olá! Tenho interesse no produto: ${p.name}\nQuantidade: ${qtd}\n${variantLabel}: ${variant}\nValor: ${valorText}\nForma de Pagamento: ${pay}`
+    card.querySelector(".btnBuy").addEventListener("click", () => {
+      const qtd = card.querySelector(".qty").value;
+      const variant = card.querySelector(".variant").value;
+      const pay = card.querySelector(".pay").value;
+
+      const label = p.type === "pod" ? "Sabor" : "Cor";
+
+      const message = encodeURIComponent(
+        `Olá! Tenho interesse no produto: ${p.name}\nQuantidade: ${qtd}\n${label}: ${variant}\nPagamento: ${pay}`
       );
-      window.open(`https://wa.me/${PHONE}?text=${text}`, '_blank');
+
+      window.open(`https://wa.me/${PHONE}?text=${message}`, "_blank");
     });
 
-    grid.appendChild(el);
+    grid.appendChild(card);
   });
 
   if(!grid.children.length){
-    grid.innerHTML = '<p>Nenhum item nesta categoria.</p>';
+    grid.innerHTML = "<p>Nenhum item nesta categoria.</p>";
   }
 }
 
-// eventos dos botões
+// eventos de clique
 catButtons.forEach(btn => {
-  btn.addEventListener('click', ()=>{
-    // destacar ativo visualmente (se quiser)
-    catButtons.forEach(b=>b.classList.remove('ativo-cat'));
-    btn.classList.add('ativo-cat');
+  btn.addEventListener("click", () => {
+    catButtons.forEach(b => b.classList.remove("ativo-cat"));
+    btn.classList.add("ativo-cat");
     render(btn.dataset.cat);
   });
 });
 
-// inicial
 loadProdutos();
 </script>
 
-<style>
-/* estilos mínimos para cards (se faltar no seu style.css) */
-.grid{display:grid;gap:12px;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));}
-.card{background:#0b2230;border-radius:8px;padding:10px;color:#e6f7ff;display:flex;gap:10px;align-items:flex-start}
-.card .media img{width:100px;height:100px;object-fit:cover;border-radius:6px}
-.card .info h3{margin:0 0 6px 0}
-.price{font-weight:700;margin:6px 0}
-.botao{background:linear-gradient(90deg,#00d4ff,#007ac1);color:#001826;padding:8px;border-radius:6px;border:none;cursor:pointer}
-.ativo-cat{outline:2px solid rgba(0,212,255,0.12)}
-</style>
-
 </body>
 </html>
-
