--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="pt-BR">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>PrimeZilla — Início</title>
-<link rel="stylesheet" href="style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>PrimeZilla — Início</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -20,18 +20,11 @@
   </nav>
 </header>
 
-<section class="hero neon">
-  <div class="hero-inner">
-    <h1>PrimeZilla</h1>
-    <p>Eletrônicos • Acessórios • Pods — entrega rápida em Jardim e Guia Lopes</p>
-  </div>
-</section>
-
 <main class="container">
 
   <h2>Destaques</h2>
 
-  <!-- mesmos filtros da aba Produtos -->
+  <!-- Filtros iguais aos da aba Produtos -->
   <div class="cats">
     <button class="catBtn" data-cat="all">Todos</button>
     <button class="catBtn" data-cat="pods">Pods</button>
@@ -48,110 +41,104 @@
   © 2025 PrimeZilla — SITE CRIADO POR @JHON_LORRAN_
 </footer>
 
-<script>
-/* MESMO SCRIPT DA ABA PRODUTOS – 100% IGUAL */
+<!-- SCRIPT DO FIREBASE QUE VOCÊ MANDOU -->
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
+  import { getFirestore, collection, query, orderBy, onSnapshot } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
 
-const PHONE = "5567992018672";
-function esc(s){
-  return String(s||'').replace(/[&<>"']/g, m =>
-    ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;','\'':'&#39;'}[m])
-  );
-}
+  const firebaseConfig = {
+    apiKey: "AIzaSyDlzVS8ZkI4bVAmcFyKH1PDojvTXGYXyso",
+    authDomain: "primezilla-70b94.firebaseapp.com",
+    projectId: "primezilla-70b94",
+    storageBucket: "primezilla-70b94.firebasestorage.app",
+    appId: "1:910803172382:web:db82186d77b8281f13020f"
+  };
 
-const grid = document.getElementById('productsGrid');
-const catButtons = Array.from(document.querySelectorAll('.catBtn'));
-let produtos = [];
+  const PHONE = "5567992018672";
 
-// carregar produtos.json
-async function loadProdutos(){
-  grid.innerHTML = 'Carregando...';
-  try {
-    const res = await fetch('produtos.json?' + Date.now());
-    if(!res.ok) throw new Error('Erro ao buscar produtos.json: ' + res.status);
-    produtos = await res.json();
-    render('all');
-  } catch(err){
-    console.error(err);
-    grid.innerHTML = '<p>Erro ao carregar produtos.</p>';
-  }
-}
+  const app = initializeApp(firebaseConfig);
+  const db = getFirestore(app);
 
-// renderizar cards
-function render(filter){
-  grid.innerHTML = '';
-  const list = produtos || [];
-  list.forEach(p => {
-    if(p.active === false) return;
-    if(filter !== 'all' && String(p.category||'').toLowerCase() !== filter) return;
+  function esc(s){ return String(s||'').replace(/[&<>"']/g,m=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m])); }
 
-    const img = p.imageUrl || p.image || 'placeholder.png';
-    const priceText = (p.price !== null && p.price !== undefined)
-      ? `${p.currency || 'R$'} ${Number(p.price).toFixed(2)}`
-      : 'Consultar valores';
+  const grid = document.getElementById('productsGrid');
+  const catButtons = Array.from(document.querySelectorAll('.catBtn'));
+  let produtos = [];
 
-    const el = document.createElement('div');
-    el.className = 'card';
-    el.innerHTML = `
-      <div class="media"><img src="${esc(img)}" alt="${esc(p.name)}"></div>
-      <div class="info">
-        <h3>${esc(p.name)}</h3>
-        <p class="price">${esc(priceText)}</p>
-        <div class="controls">
-          <label>Qtd
-            <select class="qty"><option>1</option><option>2</option><option>3</option></select>
-          </label>
-          <label>${(p.type === 'pod') ? 'Sabor' : 'Cor'}
-            <select class="variant">${(p.options||[]).map(o=>`<option>${esc(o)}</option>`).join('')}</select>
-          </label>
-          <label>Pagamento
-            <select class="pay"><option>PIX</option><option>Dinheiro</option><option>Cartão</option></select>
-          </label>
-          <button class="btnBuy botao">Comprar (WhatsApp)</button>
+  // carregar Firestore
+  const q = query(collection(db,"products"), orderBy("createdAt","desc"));
+  onSnapshot(q, snap => {
+    produtos = [];
+    snap.forEach(doc => produtos.push({ id: doc.id, ...doc.data() }));
+    render("all");
+  });
+
+  function render(filter){
+    grid.innerHTML = "";
+
+    produtos.forEach(p => {
+      if (!p.active) return;
+      if(filter !== "all" && String(p.category||"").toLowerCase() !== filter) return;
+
+      const img = p.imageUrl || p.image || "placeholder.png";
+      const priceText = p.price ? `${p.currency||"R$"} ${Number(p.price).toFixed(2)}` : "Consultar valores";
+
+      const card = document.createElement("div");
+      card.className = "card";
+
+      card.innerHTML = `
+        <div class="media"><img src="${esc(img)}"></div>
+        <div class="info">
+          <h3>${esc(p.name)}</h3>
+          <p class="price">${esc(priceText)}</p>
+          <div class="controls">
+            <label>Qtd
+              <select class="qty"><option>1</option><option>2</option><option>3</option></select>
+            </label>
+            <label>${p.type==='pod'?'Sabor':'Cor'}
+              <select class="variant">${(p.options||[]).map(o=>`<option>${esc(o)}</option>`).join("")}</select>
+            </label>
+            <label>Pagamento
+              <select class="pay"><option>PIX</option><option>Dinheiro</option><option>Cartão</option></select>
+            </label>
+            <button class="btnBuy botao">Comprar (WhatsApp)</button>
+          </div>
         </div>
-      </div>
-    `;
+      `;
 
-    el.querySelector('.btnBuy').addEventListener('click', ()=>{
-      const qtd = el.querySelector('.qty').value;
-      const variant = el.querySelector('.variant').value || '-';
-      const pay = el.querySelector('.pay').value;
-      const variantLabel = (p.type === 'pod') ? 'Sabor' : 'Cor';
-      const valorText = (p.price !== null && p.price !== undefined)
-        ? `${p.currency||'R$'} ${Number(p.price).toFixed(2)}`
-        : 'Consultar valores';
+      card.querySelector(".btnBuy").addEventListener("click", () => {
+        const qtd = card.querySelector(".qty").value;
+        const variant = card.querySelector(".variant").value;
+        const pay = card.querySelector(".pay").value;
 
-      const text = encodeURIComponent(
-        `Olá! Tenho interesse no produto: ${p.name}\nQuantidade: ${qtd}\n${variantLabel}: ${variant}\nValor: ${valorText}\nForma de Pagamento: ${pay}`
-      );
+        const msg = encodeURIComponent(
+          `Olá! Tenho interesse em: ${p.name}\nQuantidade: ${qtd}\nVariante: ${variant}\nPagamento: ${pay}`
+        );
 
-      window.open(`https://wa.me/${PHONE}?text=${text}`, '_blank');
+        window.open(`https://wa.me/${PHONE}?text=${msg}`, "_blank");
+      });
+
+      grid.appendChild(card);
     });
 
-    grid.appendChild(el);
-  });
-
-  if(!grid.children.length){
-    grid.innerHTML = '<p>Nenhum item nesta categoria.</p>';
+    if(!grid.children.length){
+      grid.innerHTML = "<p>Nenhum produto nesta categoria.</p>";
+    }
   }
-}
 
-// eventos dos filtros
-catButtons.forEach(btn => {
-  btn.addEventListener('click', ()=>{
-    catButtons.forEach(b=>b.classList.remove('ativo-cat'));
-    btn.classList.add('ativo-cat');
+  catButtons.forEach(btn => btn.addEventListener("click", () => {
+    catButtons.forEach(b=>b.classList.remove("ativo-cat"));
+    btn.classList.add("ativo-cat");
     render(btn.dataset.cat);
-  });
-});
-
-// inicial
-loadProdutos();
+  }));
 </script>
 
 <style>
+/* MESMO ESTILO QUE A ABA PRODUTOS */
 .grid{display:grid;gap:12px;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));}
 .card{background:#0b2230;border-radius:8px;padding:10px;color:#e6f7ff;display:flex;gap:10px;align-items:flex-start}
 .card .media img{width:100px;height:100px;object-fit:cover;border-radius:6px}
+.card .info h3{margin:0 0 6px 0}
 .price{font-weight:700;margin:6px 0}
 .botao{background:linear-gradient(90deg,#00d4ff,#007ac1);color:#001826;padding:8px;border-radius:6px;border:none;cursor:pointer}
 .ativo-cat{outline:2px solid rgba(0,212,255,0.12)}
